@@ -2,6 +2,9 @@
 
 	* ipy_profile_zope.py: add zope profile, by Stefan Eletzhofer.
 	Relicensed under BSD with the authors approval.
+        
+	* ipmaker.py, usage.py: Remove %magic from default banner, improve
+	%quickref        
 
 2007-09-03  Ville Vainio  <vivainio@gmail.com>
 
